force-app/main/default/objects/Inquiry__c/fields/ST_Dest__c.field-meta.xml
<CustomField>
    <fullName>ST_Dest__c</fullName>
    <formula>ReferencePrice__r.ST_Dest__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ST (Dest)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>