force-app/main/default/objects/Inquiry__c/fields/Submission_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Target_Date__c</fullName>
    <label>Submission Target Date</label>
    <type>Date</type>
</CustomField>