force-app/main/default/objects/Inquiry__c/fields/SupplierVendor__c.field-meta.xml
<CustomField>
    <fullName>SupplierVendor__c</fullName>
    <formula>ReferencePrice__r.Account__r.AccountNameENG__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier/Vendor</label>
    <type>Text</type>
</CustomField>