force-app/main/default/objects/Inquiry__c/fields/Target_Rate__c.field-meta.xml
<CustomField>
    <fullName>Target_Rate__c</fullName>
    <label>Target Rate</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>