force-app/main/default/objects/Inquiry__c/fields/TCLsJob__c.field-meta.xml
<CustomField>
    <fullName>TCLsJob__c</fullName>
    <label>TCL&apos;s Job</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TCL_Job</valueSetName>
    </valueSet>
</CustomField>