force-app/main/default/objects/Inquiry__c/fields/Tel_of_Delivery_Destination__c.field-meta.xml
<CustomField>
    <fullName>Tel_of_Delivery_Destination__c</fullName>
    <label>Tel of Delivery Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>