force-app/main/default/objects/Inquiry__c/fields/Tel_of_Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>Tel_of_Pickup_Location__c</fullName>
    <label>Tel of Pickup Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>