force-app/main/default/objects/Inquiry__c/fields/Temperature_Mode__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Mode__c</fullName>
    <label>Temperature Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>