force-app/main/default/objects/Inquiry__c/fields/TotalINCLCom__c.field-meta.xml
<CustomField>
    <fullName>TotalINCLCom__c</fullName>
    <formula>ReferencePrice__r.TotalINCLCom__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (INCL Com)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>