force-app/main/default/objects/Inquiry__c/fields/TotalNICCom__c.field-meta.xml
<CustomField>
    <fullName>TotalNICCom__c</fullName>
    <formula>ReferencePrice__r.TotalNICCom__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (NIC Com)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>