force-app/main/default/objects/Inquiry__c/fields/Type_of_Cargo__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Cargo__c</fullName>
    <label>Type of Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Cargo</valueSetName>
    </valueSet>
</CustomField>