force-app/main/default/objects/Inquiry__c/fields/TypeofTrade__c.field-meta.xml
<CustomField>
    <fullName>TypeofTrade__c</fullName>
    <label>Type of Trade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Trade</valueSetName>
    </valueSet>
</CustomField>