force-app/main/default/objects/Inquiry__c/fields/Valid_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Valid_Start_Date__c</fullName>
    <label>Valid Start Date</label>
    <type>Date</type>
</CustomField>