force-app/main/default/objects/Inquiry__c/validationRules/ETDETA_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>ETDETA_rule</fullName>
    <active>true</active>
    <errorConditionFormula>ETA__c   &lt;= ETD__c</errorConditionFormula>
    <errorMessage>ETA must be greater than ETD</errorMessage>
</ValidationRule>