force-app/main/default/objects/Inquiry__c/validationRules/Grossweightgreaterthannetweight.validationRule-meta.xml
<ValidationRule>
    <fullName>Grossweightgreaterthannetweight</fullName>
    <active>true</active>
    <errorConditionFormula>Net_WeightKg__c &gt;  Gross_WeightKg__c</errorConditionFormula>
    <errorDisplayField>Net_WeightKg__c</errorDisplayField>
    <errorMessage>Gross Weight must be greater than Net Weight. Please check again, thank you!</errorMessage>
</ValidationRule>