force-app/main/default/objects/Inquiry__c/validationRules/LockRecord.validationRule-meta.xml
<ValidationRule>
    <fullName>LockRecord</fullName>
    <active>false</active>
    <errorConditionFormula>PRIORVALUE (  Lock__c  ) = TRUE</errorConditionFormula>
    <errorMessage>This Inquiry is locked after winning the quotation.</errorMessage>
</ValidationRule>