force-app/main/default/objects/Inquiry__c/validationRules/NotesCannotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>NotesCannotBlank</fullName>
    <active>true</active>
    <errorConditionFormula>AND (  
     ISPICKVAL( Status__c , &quot;Cancelled&quot; ) = TRUE ,
      ISBLANK (  Notes__c  ) 
)</errorConditionFormula>
    <errorDisplayField>Notes__c</errorDisplayField>
    <errorMessage>Please input the reason in this field when the status is Cancelled. Thank you!</errorMessage>
</ValidationRule>