force-app/main/default/objects/Inquiry__c/validationRules/NullComboService.validationRule-meta.xml
<ValidationRule>
    <fullName>NullComboService</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK( ComboProduct1__c ),ISBLANK( ServiceType__c ))</errorConditionFormula>
    <errorDisplayField>ComboProduct1__c</errorDisplayField>
    <errorMessage>Please input Combo Product or Service Type!</errorMessage>
</ValidationRule>