force-app/main/default/objects/Inquiry__c/validationRules/NullPIC.validationRule-meta.xml
<ValidationRule>
    <fullName>NullPIC</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(InquiryPIC__c )</errorConditionFormula>
    <errorDisplayField>InquiryPIC__c</errorDisplayField>
    <errorMessage>Please input Inquiry PIC</errorMessage>
</ValidationRule>