force-app/main/default/objects/Inquiry__c/validationRules/POLPOD_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>POLPOD_rule</fullName>
    <active>false</active>
    <errorConditionFormula>POL__c  =  PODAOA1__c</errorConditionFormula>
    <errorMessage>P.O.L (A.O.A) and P.O.D (A.O.D) need to be different</errorMessage>
</ValidationRule>