force-app/main/default/objects/Inquiry__c/validationRules/Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason</fullName>
    <active>false</active>
    <errorConditionFormula>AND( TEXT(Status__c )= &quot;Returned&quot;, ISNULL(ReturningInquiryReason__c)  )</errorConditionFormula>
    <errorMessage>Please leave your comment/reason for this inquiry. Thank you!</errorMessage>
</ValidationRule>