force-app/main/default/objects/Inquiry__c/validationRules/ReturningReasonCannotBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>ReturningReasonCannotBlank</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
    ISPICKVAL( Status__c , &quot;Returned&quot; ) = TRUE ,
    ISBLANK (  ReturningInquiryReason__c )
)</errorConditionFormula>
    <errorDisplayField>ReturningInquiryReason__c</errorDisplayField>
    <errorMessage>Please input the returning reason in this field. Thank you!</errorMessage>
</ValidationRule>