force-app/main/default/objects/Inquiry__c/validationRules/ValidDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidDate</fullName>
    <active>true</active>
    <errorConditionFormula>Valid_End_Date__c &lt; Valid_Start_Date__c</errorConditionFormula>
    <errorMessage>Valid End Date must be greater than Valid Start Date</errorMessage>
</ValidationRule>