force-app/main/default/objects/Inquiry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Subject__c</columns>
    <columns>Description_of_Goods__c</columns>
    <columns>Contact__c</columns>
    <columns>PODAOA1__c</columns>
    <columns>POL__c</columns>
    <columns>Type_of_Cargo__c</columns>
    <columns>Container_Mode__c</columns>
    <columns>Valid_Start_Date__c</columns>
    <columns>Valid_End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>